sql cache 적용 및 소스 정리. sybase 적용 검토중.